<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.RouletteGUI"

    android:id="@+id/strat_roulette_choices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/weapons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weapons" />

    <TextView
        android:id="@+id/weaponsView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/medicals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/medicals" />

    <TextView
        android:id="@+id/MedicalView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/dropzone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dropzone" />

    <TextView
        android:id="@+id/dropzoneView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/gear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gear" />

    <TextView
        android:id="@+id/gearView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/character"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/character" />

    <TextView
        android:id="@+id/charcterView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/specials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/specials" />

    <TextView
        android:id="@+id/specialView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_button" />

    <Button
        android:id="@+id/randomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/randomize" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/back_Button"
        android:focusable="true"
        app:srcCompat="@drawable/abc_vector_test" />

</LinearLayout>
