<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="frent.nobos.stratApex.views.StartLaunch">

    <TextView
        android:id="@+id/Map_Choice_MainMenu"
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_your_map"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/kingsCanyon_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538"
        android:inputType="none"/>

    <Button
        android:id="@+id/kingsCanyon_button"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/kings_canyon"
        app:layout_constraintBottom_toTopOf="@+id/Olympus_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Olympus_Button"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/olympus"
        app:layout_constraintBottom_toTopOf="@id/Worlds_Edge_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kingsCanyon_button" />

    <Button
        android:id="@+id/Worlds_Edge_Button"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/world_s_edge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Olympus_Button" />


</androidx.constraintlayout.widget.ConstraintLayout>