<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menubackground"
    tools:context="views.MainActivity"
    tools:viewBindingIgnore="true">

    <TextView
        android:layout_width="287dp"
        android:layout_height="81dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/blocktastic"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:text="@string/map_choice"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <Button
        android:id="@+id/olympus_Button"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="456dp"
        android:text="@string/olympus"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/apexRed"/>

    <Button
        android:id="@+id/worldsEdge_Button"
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/world_s_edge"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742"
        android:backgroundTint="@color/apexRed"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/duoSwitch"
        android:layout_width="99dp"
        android:layout_height="53dp"
        android:text="@string/duos"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.848" />


</androidx.constraintlayout.widget.ConstraintLayout>